# strfmt

./: .gitignore  CMakeLists.txt  README.md  clear_libs.sh
include/strfmt/: strfmt.hpp
src/: strfmt.cpp
tests/: main.cpp
